--- a/app/src/main/res/menu/principal_pagina.xml
+++ b/app/src/main/res/menu/principal_pagina.xml
@@ -11,7 +11,7 @@
         app:showAsAction="always"
         android:icon="@drawable/notifications_logo"
         />
-    <item android:id="@+id/home_my_cart"
+    <item android:id="@+id/principal_meu_carrinho"
         android:title="My Cart"
         app:showAsAction="always"
         android:icon="@drawable/my_cart_logo"
