adicionado arquivos de imagens.

--- a/app/src/main/res/layout/activity_produto_detalhes.xml
+++ b/app/src/main/res/layout/activity_produto_detalhes.xml
@@ -47,7 +47,7 @@
 
             <include layout="@layout/produto_descricao_layout" />
 
-<!--            <include layout="@layout/product_details_only_layout" />-->
+            <include layout="@layout/detalhes_produto_apenas_layout" />
 
 <!--            <include layout="@layout/ratings_layout" />-->
         </LinearLayout>
